2013-03-06 21:40  msmith626@gmail.com

	* CHECKSUM.MD5, CHECKSUM.SHA256, ChangeLog, Makefile.in: fixed
	  build issue: the package name 'linux-firmware' is not compatible,
	  renamed to 'linux_firmware'

2013-03-06 21:01  msmith626@gmail.com

	* CHECKSUM.MD5, CHECKSUM.SHA256, ChangeLog, Makefile.in, TODO,
	  etc/crontab, etc/fcoe, etc/fcoe/cfg-ethx, etc/fcoe/config,
	  etc/rc.d/rc.scst, misc/linux-3.7.8.config, scripts/conf_sync.sh,
	  tui/label_data.c, tui/main.c, tui/menu_actions.c: added new
	  linux-firmware package -- it sounds like new firmware is not
	  being added directly to the Linux kernel git repo, they now are
	  trying to keep the firmware blobs separate from code; disabled
	  inlining driver firmware in the kernel since we use the
	  linux-firmware package and we only include the blobs needed for
	  drivers we enable (including the license files); fixed
	  archive_logs cron issue; updated rc.scst script for new userland
	  daemons (FCoE) and stop() function; added default config files
	  for fcoemon; re-work of conf_sync.sh -- we now sync entire
	  directories (eg, /etc /var/lib) so we get everything including
	  dynamically generated config. files; updated TUI main screen
	  label to support FCoE adapters, and support the fcst driver for
	  target functions

2013-03-05 01:26  msmith626@gmail.com

	* ChangeLog, Makefile.in: fixed build issue in open-lldp with
	  AC_FUNC_MALLOC/REALLOC

2013-03-04 22:00  msmith626@gmail.com

	* CHECKSUM.MD5, CHECKSUM.SHA256, Makefile.in, etc/rc.d/rc.scst,
	  misc/linux-3.7.8.config, tui/menu_actions-back_storage.c: added
	  Fibre Channel over Ethernet (FCoE) support (SCST -> fcst) and
	  required dependencies (open-fcoe, libconfig, libnl, open-lldp,
	  libpciaccess); updated rc.scst to load new fcst module; updated
	  Linux kernel configuration file for FCoE dependency options (data
	  center briding, etc.); fixed issue when creating file systems on
	  devices that already have a partition table (label) and/or